# genetic-algo-karen

./: LICENSE  README.md  pypirc  pyproject.toml  setup.py
genetic_algo_karen/: genetic.py  test_genetic.py
genetic_algo_karen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
