[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genetic-algo-karen"
version = "0.1.1"
description = "Librería simple de algoritmos genéticos en Python"
readme = "README.md"
requires-python = ">=3.6"
authors = [
  { name="Karen Dayana", email="karendayanadu@gmail.com" }
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/Karendudu/genetic-algo-karen"
